# jaMME

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
android/: AndroidManifest.xml  jaMME.bat
android/Mono/: DirectoryChooserDialog.cs  JAKeycodes.cs  MobileKeycodes.cs  RangeSeekBar.cs  android.csproj  jaMME.cs  jaMMEService.cs
android/Mono/Properties/: AndroidManifest.xml  AssemblyInfo.cs
android/Mono/Resources/: Resource.Designer.cs
android/jni/: Android.mk  Android_cgame.mk  Android_client.mk  Android_game.mk  Android_gles.mk  Android_ui.mk  Application.mk
android/jni/SDL2/include/: SDL_android_extra.h  SDL_video.h
android/jni/SDL2/src/core/android/: SDL_android.c
android/jni/SDL2/src/video/: SDL_video.c
android/jni/libmad/: Android.mk  libmad.mk
android/jni/libmad/msvc++/: libmad.sln  libmad.vcxproj  libmad.vcxproj.filters
android/res/values/: colors_apptheme.xml  strings.xml  styles_apptheme.xml  themes_apptheme.xml
android/src/com/jamme/: DirectoryChooserDialog.java  JAKeycodes.java  MobileKeycodes.java  RangeSeekBar.java  jaMME.java
android/src/org/libsdl/app/: SDLActivity.java
codemp/: CMakeLists.txt  jaMME.sln  jamme.vcxproj  jamme.vcxproj.filters
codemp/RMG/: RM_Path.cpp
codemp/android/: android-jni.cpp  android_glimp.cpp  android_main.cpp  android_snddma.cpp  in_android.cpp  in_android.h  sys_loadlib.h
codemp/botlib/: be_aas_entity.cpp  be_aas_move.cpp  be_aas_reach.cpp  be_ai_goal.cpp  be_ai_move.cpp  be_ai_weap.cpp  l_memory.cpp
codemp/cgame/: CMakeLists.txt  animtable.h  bg_demos.c  bg_demos.h  cg_consolecmds.c  cg_demos.c  cg_demos.h  cg_demos_anim.c  cg_demos_auto.c  cg_demos_book.c  cg_demos_camera.c  cg_demos_capture.c  cg_demos_cut.c  cg_demos_dof.c  cg_demos_hud.c  cg_demos_line.c  cg_demos_math.c  cg_demos_math.h  cg_demos_move.c  cg_demos_script.c  cg_demos_weather.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_multispec.c  cg_multispec.h  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_saga.c  cg_scoreboard.c  (+13 more)
codemp/client/: FXExport.cpp  FXExport.h  FxPrimitives.cpp  FxPrimitives.h  FxScheduler.cpp  FxScheduler.h  FxSystem.cpp  FxSystem.h  FxUtil.cpp  FxUtil.h  cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_curl.cpp  cl_curl.h  cl_demos.cpp  cl_demos.h  cl_demos_auto.cpp  cl_demos_cut.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_mme.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  snd_ambient.cpp  snd_demos.cpp  snd_dma.cpp  snd_effects.cpp  snd_local.h  snd_main.cpp  snd_mem.cpp  snd_mix.cpp  snd_mix.h  snd_mme.cpp  snd_mp3.cpp  snd_public.h
codemp/game/: CMakeLists.txt  NPC_reactions.c  NPC_stats.c  anims.h  bg_misc.c  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saberLoad.c  bg_vehicleLoad.c  g_ICARUScb.c  g_client.c  g_local.h  g_strap.c  g_team.c  g_vehicles.c  g_weapon.c  game.vcxproj  surfaceflags.h  tri_coll_test.c  w_force.c
codemp/ghoul2/: G2.h  G2_gore.h  ghoul2_shared.h
codemp/icarus/: BlockStream.cpp  GameInterface.h  icarus.h  interpreter.h
codemp/jpeg-8c/: jccolor.c  jdhuff.c
codemp/libs/win32/include/FLAC/: all.h  callback.h  format.h  metadata.h  stream_decoder.h  stream_encoder.h
codemp/libs/win32/lib/: freetype.lib  libFLAC_static.lib  libmad.lib  libogg_static.lib  libvorbis_static.lib  win_utf8_io_static.lib
codemp/libs/win32/libdebug/: libFLAC_static.lib  libmad.lib  libogg_static.lib  libvorbis_static.lib  win_utf8_io_static.lib
codemp/macosx/English.lproj/: InfoPlist.strings
codemp/null/: win_main.cpp
codemp/qcommon/: CNetProfile.cpp  GenericParser2.cpp  MiniHeap.h  RoffSystem.cpp  RoffSystem.h  cm_draw.cpp  cm_draw.h  cm_load.cpp  cm_local.h  cm_patch.cpp  cm_polylib.cpp  cm_public.h  cm_randomterrain.cpp  cm_shader.cpp  cm_terrain.cpp  cm_terrainmap.cpp  cm_trace.cpp  cmd_common.cpp  cmd_pc.cpp  common.cpp  cvar.cpp  exe_headers.h  files.h  files_common.cpp  files_pc.cpp  game_version.h  hstring.cpp  matcomp.cpp  md4.cpp  msg.cpp  net_chan.cpp  persistence.cpp  q_math.c  q_math.cpp  q_shared.c  q_shared.cpp  q_shared.h  qcommon.h  qfiles.h  sstring.h  (+8 more)
codemp/rd-gles/: CMakeLists.txt  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_gore.cpp  G2_misc.cpp  G2_surfaces.cpp  g2_local.h  tr_WorldEffects.cpp  tr_backend.cpp  tr_cmds.cpp  tr_font.cpp  tr_font.h  tr_ghoul2.cpp  tr_image.cpp  tr_image_jpg.cpp  tr_image_load.cpp  tr_image_manipulation.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_init.cpp  tr_local.h  tr_main.cpp  tr_model.cpp  tr_noise.cpp  tr_scene.cpp  tr_shade_calc.cpp  tr_subs.cpp  tr_terrain.cpp  tr_world.cpp
codemp/rd-vanilla/: CMakeLists.txt  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_local.h  G2_misc.cpp  G2_surfaces.cpp  qgl.h  rd-vanilla.vcxproj  rd-vanilla.vcxproj.filters  tr_WorldEffects.cpp  tr_backend.cpp  tr_bloom.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_font.cpp  tr_font.h  tr_font_freetype.cpp  tr_framebuffer.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_mme.cpp  tr_mme.h  tr_mmeOld.cpp  tr_mmeOld.h  tr_mmeStereo.cpp  tr_mme_avi.cpp  tr_mme_common.cpp  tr_mme_pipe.cpp  tr_mme_sse2.cpp  tr_mme_stereo.cpp  tr_model.cpp  tr_noise.cpp  tr_quicksprite.cpp  tr_quicksprite.h  (+10 more)
codemp/renderer/: mdx_format.h  tr_common.h  tr_public.h  tr_types.h
codemp/sdl/: sdl_glimp.cpp  sdl_input.cpp  sdl_qgl.h  sdl_snd.cpp
codemp/server/: server.h  sv_bot.cpp  sv_ccmds.cpp  sv_client.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_snapshot.cpp  sv_world.cpp
codemp/server/NPCNav/: navigator.cpp  navigator.h
codemp/sys/: sys_main.cpp  sys_unix.cpp
codemp/ui/: CMakeLists.txt  ui.vcxproj  ui_atoms.c  ui_local.h  ui_main.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c  ui_xcvar.h
codemp/win32/: cgame.rc  game.rc  glw_win.h  jamme.manifest  jamme.rc  openjk.aps  ui.rc  win_glimp.cpp  win_input.cpp  win_local.h  win_main.cpp  win_qgl.cpp  win_shared.cpp  win_snd.cpp  win_syscon.cpp  win_wndproc.cpp
codemp/zlib/: gzguts.h
(+2 files in other folders)
